# sedr

./: .bandit  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  sedr.py  test_results.md  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bandit.yml  codacy.yml  docker-image.yml
img/: README.md
sedr/: __init__.py  data_queries.py  edreq11.py  edreq12.py  hooks.py  metoceanprofilecore10.py  metoceanprofileinsituobservations10.py  ogcapi10.py  preflight.py  rodeoprofile10.py  rodeoprofilecore10.py  rodeoprofileinsituobservations10.py  schemat.py  test_data_queries.py  test_edreq12.py  test_init.py  test_metoceanprofilecore10.py  test_metoceanprofileinsituobservations10.py  test_ogcapi10.py  test_rodeoprofile10.py  test_rodeoprofilecore10.py  test_rodeoprofileinsituobservations10.py  test_schemat.py  test_util.py  util.py  utils.py
sedr/data_queries/: __init__.py  test_data_queries.py
sedr/tests/: hooks.py
testdata/: edrisobaric_collection.json  edrisobaric_collection_bad_bbox.json  edrisobaric_collection_bbox2.json  edrisobaric_landing-bad-desc.json  edrisobaric_landing.json  landingpage.json  landingpage.yml  landingpage_bad_service-desc.json
